feature #82 : Avoiding NPE when password is no longer in session